[tool.poetry]
name = "aw-core"
version = "0.5.0"
description = "Core library for TimeBench"
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Johan Bjäreholt <johan@bjareho.lt>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://timebench.net/"
repository = "https://github.com/minhlt9196/aw-core/"
documentation = "https://timebench.readthedocs.io/"
packages = [
    { include = "aw_core" },
    { include = "aw_datastore" },
    { include = "aw_transform" },
    { include = "aw_query" },
]

[tool.poetry.dependencies]
python = "^3.6"
jsonschema = "^3.1"
peewee = "3.*"
appdirs = "^1.4.3"
iso8601 = "^0.1.12"
python-json-logger = "^0.1.11"
TakeTheTime = "^0.3.1"
pymongo = {version = "^3.10.0", optional = true}
strict-rfc3339 = "^0.7"
timeslot = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.8.1"
mypy = "*"
pylint = "^2.4.4"

[tool.poetry.extras]
mongo = ["pymongo"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
